--- a/websurvey/public/global.css
+++ b/websurvey/public/global.css
@@ -1,5 +1,5 @@
 /* RESETS */
-*,
+/* *,
 *::before,
 *::after {
   box-sizing: border-box;
@@ -70,7 +70,7 @@ body {
 /*END RESETS*/
 
 /* GLOBAL STYLES */
-.form-group > input[type="text"] {
+/* .form-group > input[type="text"] {
   display: inline-block;
   margin-top: 0.4rem;
 }
@@ -148,10 +148,10 @@ body {
 }
 .stack-exception {
   margin-top: 1.2rem;
-}
+}  */
 /* END GLOBAL STYLES */
 
-.surveyapp {
+/* .surveyapp {
   background: #fff;
   margin: 2rem 0 4rem 0;
   padding: 1rem;
@@ -205,10 +205,10 @@ body {
   [class*="__lg"] {
     font-size: 2.4rem;
   }
-}
+} */
 
 /* Field item styles */
-.field {
+/* .field {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -224,9 +224,9 @@ body {
 }
 .field-text:focus {
   box-shadow: inset 0 0 0 2px;
-}
+} */
 /* CHECKBOX STYLES */
-.c-cb {
+/* .c-cb {
   box-sizing: border-box;
   font-family: Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -292,4 +292,73 @@ body {
 }
 .c-cb > input[type="radio"]:checked + label::after {
   opacity: 1;
+} */
+
+html,
+body {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  color: #333;
+  margin: 0;
+  padding: 8px;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+a {
+  color: rgb(0, 100, 200);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:visited {
+  color: rgb(0, 80, 160);
+}
+
+label {
+  display: block;
+}
+
+input,
+button,
+select,
+textarea {
+  font-family: inherit;
+  font-size: inherit;
+  -webkit-padding: 0.4em 0;
+  padding: 0.4em;
+  margin: 0 0 0.5em 0;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+}
+
+input:disabled {
+  color: #ccc;
+}
+
+button {
+  color: #333;
+  background-color: #f4f4f4;
+  outline: none;
+}
+
+button:disabled {
+  color: #999;
+}
+
+button:not(:disabled):active {
+  background-color: #ddd;
+}
+
+button:focus {
+  border-color: #666;
 }
