feat: changed off time, made survey settings per form version
- Added kill switch to the UI, per form version.
- Changed survey settings to work per form version, with surveyid.
- Changed replybot to send off message whenever off time past.

--- a/dashboard-client/src/containers/SurveyScreen/SurveyScreen.css
+++ b/dashboard-client/src/containers/SurveyScreen/SurveyScreen.css
@@ -18,3 +18,9 @@
   background-color: #EEE;
   border-bottom: 1px solid #DDD;
 }
+
+.survey-table .skull {
+  font-weight: 700;
+  margin: -10px -10px -10px -10px;
+  font-size: 1.2em;
+}
